--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,49 +1,62 @@
-.header{
-    background-color: #89d5d2;
-    text-align: center;
-    color: green;
-    overflow: hidden;
-    position: fixed; /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
-    display: flex;
-    position: relative;
-    height: 250px;
-  }
-
-.banner{
-position:absolute;
-margin-left: -5px
+.header {
+  background-color: #89d5d2;
+  text-align: center;
+  color: darkblue;
+  overflow: hidden;
+  position: fixed;
+  /* Set the navbar to fixed position */
+  top: 0;
+  /* Position the navbar at the top of the page */
+  width: 100%;
+  /* Full width */
+  display: flex;
+  position: relative;
+  max-height: 100%;
+  height:auto;
 }
 
-a:active { text-decoration: none; }
-a:hover { text-decoration: none; }
-
-.navtext{
-    text-decoration: none;
-    margin-top: 100px;
+.banner {
+  position: absolute;
+  margin-left: -5px;
+  
 }
 
-.body{
-    background-color: #ebe8e2;
+a:active {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.navtext {
+  text-decoration: none;
+  margin-top: 100px;
+  color:green;
+  background-color: rgba(239, 239, 240, 0.8);
+  ;
+}
+
+.body {
+  background-color: #ebe8e2;
 }
 
 .dropdown-menu {
-    height: 200px;
-    overflow-y: scroll;
-  }
+  height: 200px;
+  overflow-y: scroll;
+}
 
-  .picksTable{
-    width: 50%;
-  }
+.picksTable {
+  width: 50%;
+}
 
-  .fix-col {
-    border-left: solid 1px rgb(75, 90, 102);
-    border-right: solid 1px rgb(75, 90, 102);
-    left: 0;
-    position: absolute;
-    top: auto;
-    /* color: blue; */
+.fix-col {
+  border-left: solid 1px rgb(75, 90, 102);
+  border-right: solid 1px rgb(75, 90, 102);
+  left: 0;
+  position: absolute;
+  top: auto;
+  /* color: blue; */
 }
 
 .table-main {
@@ -82,7 +95,7 @@ a:hover { text-decoration: none; }
   overflow-y: visible;
   padding-bottom: 5px;
   width: 2000px;
-} 
+}
 
 .table-main .fix-col {
   border-left: solid 1px rgb(75, 90, 102);
